# Lugormod-v3

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/modules/: install-config.cmake
docs/: cvars.md
game/: Lmd_Accounts.c  Lmd_Accounts_Core.c  Lmd_Accounts_CustomSkills.c  Lmd_Accounts_Friends.c  Lmd_Accounts_Property.c  Lmd_Accounts_Stats.c  Lmd_Admin.c  Lmd_Commands.c  Lmd_Commands_Auths.c  Lmd_Commands_Cheats.c  Lmd_Commands_Core.c  Lmd_Commands_Core.h  Lmd_Console.c  Lmd_CrashReport.c  Lmd_Creditshunt.c  Lmd_Crosshair.c  Lmd_Crosshair.h  Lmd_Data.c  Lmd_Entities_Commands.c  Lmd_Entities_Core.c  Lmd_Entities_Ents.c  Lmd_Entities_Load.c  Lmd_Force_Dark.c  Lmd_Force_Light.c  Lmd_Force_Neutral.c  Lmd_IPs.c  Lmd_Inventory_Core.c  Lmd_Inventory_Core_AccBased.c  Lmd_Main.c  Lmd_Prof_Core.c  Lmd_Prof_Jedi.c  Lmd_Prof_Merc.c  Lmd_Professions.h  Lmd_Professions_Public.h  Lmd_SetSaber.c  Lmd_SetSaber.h  Lmd_StashZone.c  Lmd_Time.c  NPC_AI_Defender.c  bg_lib.c  (+27 more)
resources/: INSTALL.md
resources/GameData/: Start LAN game.bat  Start dedicated.bat
resources/GameData/lugormod/: bots.cfg  cmdleveldefs.cfg
resources/GameData/lugormod/botfiles/: astupidbot.jkb
resources/GameData/lugormod/botroutes/: taspir1.wnt
resources/GameData/lugormod/data/authfiles/: admin.auth  builder.auth  owner.auth
win32/: JK2game.rc
